@@ -1,3 +1,9 @@
+Sat Feb 18 09:34:42 GMT 2012  Colin Watson  <cjwatson@debian.org>
+
+	* lib/hashtable.c (hashtable_lookup_structure): Make return type
+	  more precise.
+	* lib/hashtable.h (hashtable_lookup_structure): Update prototype.
+
 Thu Feb 16 10:55:05 GMT 2012  Colin Watson  <cjwatson@debian.org>
 
 	* Makefile.am (EXTRA_DIST): Add gnulib/m4/math_h.m4.
